# linkshit

./: .gitignore  COPYING  README.md  linkshit.py  pyproject.toml  setup.py  test_linkshit.py  tox.ini
.github/workflows/: lint.yml  test.yml
linkshit/: __init__.py
